--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,13 +14,8 @@
             "args": [],
             "cwd": "${workspaceFolder}/QuestConsole",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "internalConsole",
+            "console": "externalTerminal",
             "stopAtEntry": false
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach"
         }
     ]
 }
